# time-manager-backend

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  app.yaml  deploy.sh  dev.dockerfile  firebase.json  main.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
.run/: Dev Server.run.xml  Test Deps.run.xml  Test Suite.run.xml
.terraform/: main.tf  variables.tf
TimeManagerBackend/: admin.py  application.py  asgi.py  urls.py  wsgi.py
TimeManagerBackend/apps/errors/: apps.py  errors.py  handler.py
TimeManagerBackend/apps/errors/models/: models.py  serializers.py
TimeManagerBackend/apps/events/: apps.py  urls.py  views.py
TimeManagerBackend/apps/events/migrations/: 0001_initial.py
TimeManagerBackend/apps/events/models/: models.py  serializers.py
TimeManagerBackend/apps/images/: apps.py  urls.py  views.py
TimeManagerBackend/apps/images/migrations/: 0001_initial.py
TimeManagerBackend/apps/images/models/: fields.py  models.py  serializers.py
TimeManagerBackend/apps/notes/: apps.py  models.py  urls.py  views.py
TimeManagerBackend/apps/notes/boards/: models.py  serializers.py  (+1 more)
TimeManagerBackend/apps/tokens/: apps.py  serializers.py  urls.py  views.py
TimeManagerBackend/apps/users/: urls.py  views.py
TimeManagerBackend/docs/: openapi.py  settings.py
TimeManagerBackend/lib/: fields.py  firestore.py  gcp_auth.py  openapi_schema_gen.py  prometheus.py  viewsets.py
TimeManagerBackend/lib/commons/: constrained.py  defaults.py  firestore.py  gcs.py  href.py  mixins.py
TimeManagerBackend/lib/errors/: exc.py  handler.py  utils.py
TimeManagerBackend/settings/: development.py  production.py  remote.py
docker/: docker-compose.srv.yml  docker-compose.test.yml  docker-compose.vols.yml  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh  firebase-entrypoint.sh  firebase.dockerfile
scripts/: common.sh  deploy.sh  reset_db.sh  test.sh
server/: nginx-default.conf.template  uwsgi-dev.ini  uwsgi.ini
tests/: conftest.py  pre_test.sh
tests/data/: b64.py
tests/inbuilts/: test_cors.py  test_tokens.py
tests/integration/: test_auth.py  test_events.py  test_images.py  test_notes.py  test_users.py
tests/integration/lib/: test_gcp_auth.py  test_prometheus.py
tests/integration/notes/: test_boards.py  test_groups.py  test_notes.py
(+17 files in other folders)
